--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -9,13 +9,16 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url('../images/blurbg.png');
+ 
   background-size: cover;
   background-position: center;
   z-index: -1;
 } */
 /* CSS */
 /* CSS */
+.section{
+  background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190221/ourmid/pngtree-business-character-fluid-gradient-image_21243.jpg");
+}
 .hover-effect:hover {
   transform: scale(1.05); /* Scale up the card on hover */
   transition: transform 0.3s ease; /* Add transition effect */
